complete home work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="action_settings">Settings</string>
+    <string name="add_file">add file</string>
+    <string name="big_text">EEEE t t t h !!! (( ZZZZZ // 000 9999 )) E t t t h !!! (( Z // 0 00 9 9 )) EEE nnn ttt eee rrr y y ooo u u rrr ttt eee x x ttt hhh eee rrr eee !!! (( aa --- Z // 0 0 0 --- 9999 )) E n n t e e r y y o o u u r t e e x t h h e e r e e (( a a Z // 00 0 9 )) EEEE n n tt ee r yyy ooo uuu r tt ee x x tt h h ee r ee !!! (( aaa ZZZZZ // 000 9 )) y yyy</string>
 </resources>
